--- a/frontend/src/components/login/login.css
+++ b/frontend/src/components/login/login.css
@@ -1,11 +1,33 @@
 body{
-    background-color: rgb(229, 232, 243) !important;
+    background-color: #f4fafb !important;
     min-height: 100vh;
     width: 100%;
 }
 
+.container-login-signup{
+    height: 100vh;
+}
+
+.container-grid-form{
+    background-color: #f4fafb !important;
+}
+
+.container-image-login{
+    background-image: url(../../assets/examen-signup.jpg);
+    background-repeat: 'no-repeat';
+    background-size: cover;
+    background-position: 'center';
+}
+
+.container-image-signup{
+    background-image: url(../../assets/examen-signup.jpg);
+    background-repeat: 'no-repeat';
+    background-size: cover;
+    background-position: 'center';
+}
+
 .container-login-signup-paper{
-    margin-top: 70px;
+    margin: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
