nueva seccion de preguntas del examen

--- a/frontend/src/assets/css/createTestPage.css
+++ b/frontend/src/assets/css/createTestPage.css
@@ -37,6 +37,7 @@
     justify-content: flex-end;
     padding: 0 8px;
     min-height: 64px;
+    background-color: #f7f7f7;
 }
 
 /* Seccion de Pregunta*/
