añadido footer, creado layout, crear pagina grafica, crear pagina terminar examen correctamente

--- a/frontend/src/assets/css/createTestPage.css
+++ b/frontend/src/assets/css/createTestPage.css
@@ -46,6 +46,7 @@
     flex-wrap: wrap;
     align-content: space-between;
     align-items: center;
+    width: 100%
 }
 
 .flex-box-titulo > div:first-child{
