validar campos requeridos

--- a/frontend/src/assets/css/createTestPage.css
+++ b/frontend/src/assets/css/createTestPage.css
@@ -14,7 +14,7 @@
 }
 
 .paper-crear-test.section-paper-crear-test{
-    height: 160px;
+    /* height: 160px; */
 }
 
 .paper-crear-test.section-paper-crear-test.ultima-seccion{
