--- a/frontend/src/componentes/loading/Loading.css
+++ b/frontend/src/componentes/loading/Loading.css
@@ -2,6 +2,9 @@
     background-color: rgba(0, 0, 0, 0.4);
     width: 100vw;
     height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .lds-spinner {
