--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,6 +22,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-left: 2%;
+  padding-right: 2%;
+  font-weight: 600;
+  font-family: Helvetica;
 }
 
 .App-link {
