--- a/frontend/src/componentes/loading/Loading.css
+++ b/frontend/src/componentes/loading/Loading.css
@@ -1,10 +1,15 @@
 .container-loading{
-    background-color: rgba(0, 0, 0, 0.4);
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    z-index: 1200;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-tap-highlight-color: transparent;
 }
 
 .lds-spinner {
